--- a/dex/src/App.css
+++ b/dex/src/App.css
@@ -12,14 +12,14 @@ header {
 }
 
 .logo{
-  width: 40px;
-  height: 40px;
+  width: 80px;
+  height: 80px;
   padding-right: 20px;
 }
 
-.eth{
-  width: 20px;
-  height: 20px;
+.radix-network{
+  width: 60px;
+  height:60px;
   padding-right: 10px;
 }
 
